syntax = "proto3";

package starknet.sync;

import "common.proto";
import "propagation.proto";

message Request {
  oneof request {
    GetBlockHeaders get_block_headers = 1;
    GetBlockBodies get_block_bodies = 2;
    GetStateDiffs get_state_diffs = 3;
    Status status = 4;
    GetContractClasses get_contract_classes = 5;
  }
}

message Response {
  oneof response {
    BlockHeaders block_headers = 1;
    BlockBodies block_bodies = 2;
    StateDiffs state_diffs = 3;
    Status status = 4;
    ContractClasses classes = 5;
  }
}

enum Direction {
  FORWARD = 0;
  BACKWARD = 1;
}

message GetBlockHeaders {
  // starknet.common.FieldElement start_block =
  //     2;            // block hash of the starting block
  // TODO how am I supposed to know the hash of a block ahead of my head
  uint64 start_block = 1;
  uint64 count = 2; // how many block, at most, to retrieve from this requested
                    // starting point
  uint64 size_limit = 3; // limit on size of returned messages.

  Direction direction = 4;
}

/*
    A response to GetBlockHeaders, returning a consecutive `count` of blocks (or
   less if there are less available)
 */
message BlockHeaders { repeated starknet.common.BlockHeader headers = 1; }

message GetBlockBodies {
  starknet.common.FieldElement start_block = 1; // block hash of the starting block
  uint64 count = 2; // how many block, at most, to retrieve from this requested
                    // starting point
  uint64 size_limit = 3;

  Direction direction = 4;
}

message BlockBodies { repeated starknet.common.BlockBody block_bodies = 2; }

message GetStateDiffs {
  starknet.common.FieldElement start_block = 1; // block hash of the starting block
  uint64 count = 2; // how many block, at most, to retrieve from this requested
                    // starting point
  uint64 size_limit = 3;

  Direction direction = 4;
}

message StateDiffs {
  message BlockStateUpdateWithHash {
    starknet.common.FieldElement block_hash = 1;
    starknet.propagation.BlockStateUpdate state_update = 2;
  }

  repeated BlockStateUpdateWithHash block_state_updates = 2;
}

message Status {
  uint64 height = 1;
  starknet.common.FieldElement hash = 2;
  starknet.common.FieldElement chain_id = 3;
}

message GetContractClasses {
  repeated starknet.common.FieldElement class_hashes = 1;
  uint64 count = 2; // how many classes, at most, to retrieve
  uint64 size_limit = 3;
}

message ContractClasses {
  repeated starknet.common.CompressedContractClass contract_classes = 1;
}
